--- a/pom.xml
+++ b/pom.xml
@@ -29,10 +29,10 @@
         </dependency>
 
         <!--Kryo serializer-->
-        <dependency>
-            <groupId>com.esotericsoftware</groupId>
-            <artifactId>kryo</artifactId>
-            <version>4.0.1</version>
-        </dependency>
+        <!--<dependency>-->
+            <!--<groupId>com.esotericsoftware</groupId>-->
+            <!--<artifactId>kryo</artifactId>-->
+            <!--<version>4.0.1</version>-->
+        <!--</dependency>-->
     </dependencies>
 </project>
