--- a/pom.xml
+++ b/pom.xml
@@ -24,9 +24,15 @@
         <!-- Spark dependency -->
         <dependency>
             <groupId>org.apache.spark</groupId>
-            <artifactId>spark-core_2.11</artifactId>
-            <version>2.2.0</version>
+            <artifactId>spark-core_2.10</artifactId>
+            <version>1.6.2</version>
         </dependency>
+
+        <!--<dependency>-->
+            <!--<groupId>org.apache.spark</groupId>-->
+            <!--<artifactId>spark-sql_2.11</artifactId>-->
+            <!--<version>2.2.0</version>-->
+        <!--</dependency>-->
 
         <!--Kryo serializer-->
         <!--<dependency>-->
